--- a/Bac/Philosophie/notion10.html
+++ b/Bac/Philosophie/notion10.html
@@ -20,7 +20,7 @@
     </ul>
 </div>
 
-<div class="page-break"></div>
+
 
 <div class="course-section">    <h5>Théories essentielles</h5>
     <p><strong>Aristote :</strong> Bonheur = activité de l'âme selon vertu parfaite. Nécessite vie entière et biens extérieurs suffisants.</p>
@@ -31,9 +31,7 @@
       <p><strong>Kant :</strong> Bonheur empirique ne peut fonder morale (subjectif, variable). Seul bonheur moral (souverain bien) unit vertu et satisfaction.</p>
 </div>
 
-<div class="page-break"></div>
-
-<div class="examples-section">
+<div class="page-break"></div><div class="examples-section">
     <h4><i class="fas fa-lightbulb"></i> Exemples et analyses</h4>
     <div class="example">
         <div class="example-title">Exemple 1 : Le paradoxe du bonheur moderne</div>
@@ -47,9 +45,6 @@
     </div>
 </div>
 
-<div class="page-break"></div>
-
-<div class="examples-section">
     <h4><i class="fas fa-question-circle"></i> Problématiques essentielles</h4>
     <div class="example">
         <div class="example-title">Problème 1 : Bonheur et vertu</div>
@@ -61,10 +56,6 @@
     </div>
 </div>
 
-<div class="page-break"></div>
-
-<div class="examples-section">
-    <h4><i class="fa fa-quote-left"></i> Citations clés à retenir</h4>
     <div class="example">
         <div class="example-title">Aristote</div>
         <p><em>"Le bonheur est une activité de l'âme selon la vertu parfaite."</em></p>
@@ -84,3 +75,5 @@
 </div>
 </body>
 </html>
+
+
