--- a/Bac/Philosophie/notion15.html
+++ b/Bac/Philosophie/notion15.html
@@ -21,7 +21,7 @@
     </ul>
 </div>
 
-<div class="page-break"></div>
+
 
 <div class="course-section">
     <h5>Théories essentielles</h5>
@@ -34,9 +34,7 @@
     <p><strong>Kuhn :</strong> Science progresse par révolutions paradigmatiques, pas seulement accumulation linéaire.</p>
 </div>
 
-<div class="page-break"></div>
-
-<div class="examples-section">
+<div class="page-break"></div><div class="examples-section">
     <h4><i class="fas fa-lightbulb"></i> Exemples et analyses</h4>
     <div class="example">
         <div class="example-title">Exemple 1 : La révolution copernicienne</div>
@@ -57,9 +55,6 @@
     </div>
 </div>
 
-<div class="page-break"></div>
-
-<div class="examples-section">
     <h4><i class="fas fa-question-circle"></i> Problématiques essentielles</h4>
     <div class="example">
         <div class="example-title">Problème 1 : Objectivité et subjectivité</div>
@@ -72,10 +67,6 @@
     </div>
 </div>
 
-<div class="page-break"></div>
-
-<div class="examples-section">
-    <h4><i class="fa fa-quote-left"></i> Citations clés à retenir</h4>
     <div class="example">
         <div class="example-title">Francis Bacon</div>
         <p><em>"Savoir, c'est pouvoir."</em></p>
@@ -96,3 +87,5 @@
 </div>
 </body>
 </html>
+
+
