--- a/Bac/Philosophie/notion16.html
+++ b/Bac/Philosophie/notion16.html
@@ -21,7 +21,7 @@
     </ul>
 </div>
 
-<div class="page-break"></div>
+
 
 <div class="course-section">
     <h5>Théories essentielles</h5>
@@ -34,9 +34,7 @@
     <p><strong>Weber :</strong> État = monopole de la violence physique légitime sur territoire donné. Autorité légale-rationnelle.</p>
 </div>
 
-<div class="page-break"></div>
-
-<div class="examples-section">
+<div class="page-break"></div><div class="examples-section">
     <h4><i class="fas fa-lightbulb"></i> Exemples et analyses</h4>
     <div class="example">
         <div class="example-title">Exemple 1 : La désobéissance civile</div>
@@ -57,9 +55,6 @@
     </div>
 </div>
 
-<div class="page-break"></div>
-
-<div class="examples-section">
     <h4><i class="fas fa-question-circle"></i> Problématiques essentielles</h4>
     <div class="example">
         <div class="example-title">Problème 1 : Légitimité et légalité</div>
@@ -72,10 +67,6 @@
     </div>
 </div>
 
-<div class="page-break"></div>
-
-<div class="examples-section">
-    <h4><i class="fa fa-quote-left"></i> Citations clés à retenir</h4>
     <div class="example">
         <div class="example-title">Thomas Hobbes</div>
         <p><em>"L'homme est un loup pour l'homme."</em></p>
@@ -102,3 +93,5 @@
 </div>
 </body>
 </html>
+
+
