--- a/Bac/Philosophie/notion5.html
+++ b/Bac/Philosophie/notion5.html
@@ -23,32 +23,42 @@
     <p><strong>Aristote :</strong> Art purifie par catharsis, révèle universel dans particulier.</p>
     <p><strong>Kant :</strong> Beau plaît universellement sans concept. Art = "finalité sans fin".</p>
     <p><strong>Hegel :</strong> Art révèle l'Absolu sensiblement (symbolique→classique→romantique).</p>
+    <p><strong>Schopenhauer :</strong> Art libère de la volonté, permet contemplation pure des Idées.</p>
+    <p><strong>Benjamin :</strong> Reproductibilité technique détruit "aura" de l'œuvre d'art unique.</p>
 </div>
 
-<div class="page-break"></div>
-
-<div class="examples-section">
+<div class="page-break"></div><div class="examples-section">
     <h4><i class="fas fa-lightbulb"></i> Exemples</h4>
     <div class="example">
         <div class="example-title">La Joconde</div>
-        <p>Dépasse simple représentation, crée présence mystérieuse.</p>
+        <p>Portrait de Mona Lisa dépasse simple représentation : sourire énigmatique, regard qui suit, technique sfumato créent présence mystérieuse. Œuvre la plus célèbre au monde.</p>
+        <p><strong>Analyse :</strong> Illustre pouvoir de l'art à transformer modèle réel en symbole universel. Perfection technique au service d'émotion intemporelle.</p>
     </div>
     <div class="example">
-        <div class="example-title">Guernica</div>
-        <p>Style cubiste exprime horreur guerre. Art politique sans perdre valeur esthétique.</p>
+        <div class="example-title">Guernica de Picasso</div>
+        <p>Réaction au bombardement de Guernica (1937). Style cubiste fragmente formes pour exprimer violence. Noir et blanc accentuent tragédie.</p>
+        <p><strong>Analyse :</strong> Montre comment art peut être engagé politiquement sans perdre valeur esthétique. Innovation formelle sert dénonciation éthique.</p>
+    </div>
+    <div class="example">
+        <div class="example-title">Les Nymphéas de Monet</div>
+        <p>Série de 250 peintures du jardin de Giverny. Recherche pure de la lumière et couleur, abstraction progressive.</p>
+        <p><strong>Analyse :</strong> Art pour l'art : beauté détachée de tout message. Contemplation pure, harmonie des formes et couleurs.</p>
     </div>
 
     <h4><i class="fas fa-question-circle"></i> Problèmes</h4>
     <div class="example">
         <div class="example-title">Art et vérité</div>
-        <p>L'art révèle-t-il vérités inaccessibles à la science ou illusion ?</p>
+        <p>L'art révèle-t-il des vérités inaccessibles à la science et à la philosophie, ou n'est-il qu'illusion séduisante ? Platon critique l'art comme mensonge, Hegel y voit révélation de l'Absolu.</p>
     </div>
     <div class="example">
-        <div class="example-title">Subjectif/objectif</div>
-        <p>Jugement esthétique subjectif ou prétention universalité ?</p>
+        <div class="example-title">Subjectivité et universalité</div>
+        <p>Le jugement esthétique est-il purement subjectif ("des goûts et des couleurs...") ou a-t-il prétention à l'universalité ? Kant tente de concilier : subjectif dans son origine, universel dans sa prétention.</p>
+    </div>
+    <div class="example">
+        <div class="example-title">Art et utilité</div>
+        <p>L'art doit-il servir (éduquer, émouvoir, critiquer) ou être gratuit ? L'art pour l'art vs art engagé. La beauté a-t-elle une fonction sociale ?</p>
     </div>
 
-    <h4><i class="fa fa-quote-left"></i> Citations</h4>
     <div class="example">
         <div class="example-title">Kant</div>
         <p><em>"Le beau est ce qui plaît universellement sans concept."</em></p>
@@ -64,3 +74,5 @@
 </div>
 </body>
 </html>
+
+
