--- a/Bac/Philosophie/notion6.html
+++ b/Bac/Philosophie/notion6.html
@@ -18,68 +18,67 @@
         <li><b>Aliénation (Marx) :</b> Travailleur devient étranger à son travail, produits, collègues et lui-même</li>
         <li><b>Propriétés :</b> Humanise l'homme, transforme le monde, peut épanouir ou asservir</li>
     </ul>
-</div>
 
-<div class="page-break"></div>
-
-<div class="course-section">
     <h5>Théories essentielles</h5>
     <p><strong>Hegel :</strong> Dialectique maître/esclave : le travail permet à l'esclave de se réaliser comme conscience libre.</p>
-    
-    <p><strong>Marx :</strong> Dans le capitalisme, le travailleur est dépossédé du fruit de son travail. Aliénation économique = aliénation humaine.</p>
-      <p><strong>Arendt :</strong> Distinction travail (reproduction), œuvre (création), action (politique). Modernité privilégie travail au détriment d'action.</p>
+    <p><strong>Marx :</strong> Dans le capitalisme, le travailleur est dépossédé du fruit de son travail. Aliénation économique = aliénation humaine.</p>    <p><strong>Arendt :</strong> Distinction travail (reproduction), œuvre (création), action (politique). Modernité privilégie travail au détriment d'action.</p>
+    <p><strong>Weber :</strong> "Éthique protestante" valorise travail comme vocation, fonde "esprit du capitalisme".</p>
 </div>
 
-<div class="page-break"></div>
-
-<div class="examples-section">
-    <h4><i class="fas fa-lightbulb"></i> Exemples et analyses</h4>
+<div class="page-break"></div><div class="examples-section">
+    <h4><i class="fas fa-lightbulb"></i> Exemples et analyses</h4>    <div class="example">
+        <div class="example-title">L'artisan et l'ouvrier spécialisé</div>
+        <p>L'artisan médiéval maîtrise son travail de A à Z : il choisit ses matériaux, connaît ses clients, signe son œuvre. L'ouvrier moderne répète gestes fragmentaires sans voir le produit final ni connaître sa destination.</p>
+        <p><strong>Analyse :</strong> Illustre passage d'un travail total (création, maîtrise, reconnaissance) à un travail parcellaire (répétition, anonymat). Division du travail accroît productivité mais peut déshumaniser.</p>
+    </div>
     <div class="example">
-        <div class="example-title">Exemple 1 : L'artisan et l'ouvrier à la chaîne</div>
-        <p>L'artisan maîtrise son travail de A à Z, connaît son client, est fier de son œuvre. L'ouvrier à la chaîne répète des gestes fragmentaires sans voir le produit final.</p>
-        <p><strong>Analyse :</strong> Cet exemple illustre la différence entre un travail épanouissant (création, maîtrise, reconnaissance) et un travail aliénant (répétition, fragmentation, anonymat).</p>
+        <div class="example-title">Le télétravail et les nouvelles technologies</div>
+        <p>Avec Internet, certains travailleurs peuvent exercer depuis chez eux, gagnant en autonomie mais perdant lien social. Intelligence artificielle menace emplois qualifiés.</p>
+        <p><strong>Analyse :</strong> Technologies transforment nature du travail : libération des contraintes spatiales mais nouvelles aliénations (surveillance numérique, isolement). Questionne l'avenir du travail humain.</p>
     </div>
-      <div class="example">
-        <div class="example-title">Exemple 2 : L'automatisation et les robots</div>
-        <p>Les robots remplacent progressivement les humains dans de nombreuses tâches. Certains y voient une libération du travail pénible, d'autres une menace pour l'emploi.</p>
-        <p><strong>Analyse :</strong> La technologie pose la question fondamentale : le travail est-il une malédiction dont il faut se libérer ou une dimension essentielle de l'humanité ?</p>
+    <div class="example">
+        <div class="example-title">Les "bullshit jobs"</div>
+        <p>David Graeber décrit emplois inutiles socialement mais bien rémunérés, générant frustration chez travailleurs conscients de l'inutilité de leur tâche.</p>
+        <p><strong>Analyse :</strong> Révèle divorce entre utilité sociale et rémunération. Interroge sens du travail dans société post-industrielle : travailler pour gagner sa vie ou pour contribuer au bien commun ?</p>
     </div>
-</div>
 
-<div class="page-break"></div>
-
-<div class="examples-section">
     <h4><i class="fas fa-question-circle"></i> Problématiques essentielles</h4>
     <div class="example">
         <div class="example-title">Problème 1 : Travail et dignité humaine</div>
         <p>Le travail confère-t-il sa dignité à l'être humain ou peut-on concevoir d'autres sources de reconnaissance sociale ? Le droit au travail implique-t-il le devoir de travailler ?</p>
     </div>
-      <div class="example">
+    <div class="example">
         <div class="example-title">Problème 2 : Efficacité et sens</div>
         <p>Faut-il privilégier l'efficacité économique (productivité, compétitivité) ou le sens du travail (épanouissement, créativité) ? Ces deux exigences sont-elles conciliables ?</p>
     </div>
 </div>
 
-<div class="page-break"></div>
-
-<div class="examples-section">
-    <h4><i class="fa fa-quote-left"></i> Citations clés à retenir</h4>
     <div class="example">
         <div class="example-title">Karl Marx</div>
         <p><em>"Le travail est d'abord un procès qui se passe entre l'homme et la nature, procès dans lequel l'homme règle et contrôle son métabolisme avec la nature par la médiation de sa propre action."</em></p>
-        <p><strong>Contexte :</strong> Le Capital - définition anthropologique du travail.</p>
     </div>
-    
     <div class="example">
         <div class="example-title">Georg Wilhelm Friedrich Hegel</div>
         <p><em>"C'est par le travail que l'homme se rend maître de la nature et de lui-même."</em></p>
-        <p><strong>Contexte :</strong> La dialectique du maître et de l'esclave - le travail comme voie vers la liberté.</p>
     </div>
-      <div class="example">
+    <div class="example">
         <div class="example-title">Hannah Arendt</div>
         <p><em>"L'homme est un animal laborans."</em></p>
-        <p><strong>Contexte :</strong> Condition de l'homme moderne - critique de la société du travail.</p>
+    </div>
+    <div class="example">
+        <div class="example-title">Adam Smith</div>
+        <p><em>"La division du travail accroît la richesse des nations mais peut appauvrir l'ouvrier."</em></p>
+    </div>
+    <div class="example">
+        <div class="example-title">John Ruskin</div>
+        <p><em>"Il n'y a pas de richesse que la vie."</em></p>
+    </div>
+    <div class="example">
+        <div class="example-title">André Gorz</div>
+        <p><em>"Le temps libéré du travail n'est pas nécessairement du temps libre."</em></p>
     </div>
 </div>
 </body>
 </html>
+
+
