--- a/Bac/Philosophie/notion8.html
+++ b/Bac/Philosophie/notion8.html
@@ -20,7 +20,7 @@
     </ul>
 </div>
 
-<div class="page-break"></div>
+
 
 <div class="course-section">
     <h5>Théories essentielles</h5>
@@ -33,9 +33,7 @@
     <p><strong>Ellul :</strong> Technique = système autonome qui échappe au contrôle humain. Obéit à sa logique d'efficacité, transforme tous domaines.</p>
 </div>
 
-<div class="page-break"></div>
-
-<div class="examples-section">
+<div class="page-break"></div><div class="examples-section">
     <h4><i class="fas fa-lightbulb"></i> Exemples et analyses</h4>
     
     <div class="example">
@@ -49,9 +47,6 @@
     </div>
 </div>
 
-<div class="page-break"></div>
-
-<div class="examples-section">
     <h4><i class="fas fa-question-circle"></i> Problématiques essentielles</h4>
     <div class="example">
         <div class="example-title">Problème 1 : Neutralité de la technique</div>
@@ -64,10 +59,6 @@
     </div>
 </div>
 
-<div class="page-break"></div>
-
-<div class="examples-section">
-    <h4><i class="fa fa-quote-left"></i> Citations clés à retenir</h4>
     <div class="example">
         <div class="example-title">Francis Bacon</div>
         <p><em>"Savoir, c'est pouvoir."</em></p>
@@ -89,3 +80,5 @@
 
 </body>
 </html>
+
+
