--- a/Bac/Philosophie/notion9.html
+++ b/Bac/Philosophie/notion9.html
@@ -19,7 +19,7 @@
     </ul>
 </div>
 
-<div class="page-break"></div>
+
 
 <div class="course-section">    <h5>Théories essentielles</h5>
     <p><strong>Aristote :</strong> Nature agit en vue d'une fin ("nature ne fait rien en vain"). Chaque être a finalité interne. Homme = "animal politique" par nature.</p>
@@ -31,9 +31,7 @@
     <p><strong>Kant :</strong> Homme appartient simultanément au monde sensible (nature) et intelligible (liberté morale). Doit s'élever par la raison.</p>
 </div>
 
-<div class="page-break"></div>
-
-<div class="examples-section">
+<div class="page-break"></div><div class="examples-section">
     <h4><i class="fas fa-lightbulb"></i> Exemples et analyses</h4>
     <div class="example">
         <div class="example-title">Exemple 1 : L'enfant sauvage de l'Aveyron</div>
@@ -47,9 +45,6 @@
     </div>
 </div>
 
-<div class="page-break"></div>
-
-<div class="examples-section">
     <h4><i class="fas fa-question-circle"></i> Problématiques essentielles</h4>
     <div class="example">
         <div class="example-title">Problème 1 : Nature et liberté</div>
@@ -61,10 +56,6 @@
     </div>
 </div>
 
-<div class="page-break"></div>
-
-<div class="examples-section">
-    <h4><i class="fa fa-quote-left"></i> Citations clés à retenir</h4>
     <div class="example">
         <div class="example-title">Jean-Jacques Rousseau</div>
         <p><em>"L'homme est né libre, et partout il est dans les fers."</em></p>
@@ -84,3 +75,5 @@
 </div>
 </body>
 </html>
+
+
