--- a/Bac/Philosophie/notion11.html
+++ b/Bac/Philosophie/notion11.html
@@ -20,7 +20,7 @@
     </ul>
 </div>
 
-<div class="page-break"></div>
+
 
 <div class="course-section">    <h5>Théories essentielles</h5>
     <p><strong>Aristote :</strong> "L'homme est le seul animal qui possède la parole." Langage permet communication concepts abstraits, fonde vie politique.</p>
@@ -30,9 +30,7 @@
     <p><strong>Wittgenstein :</strong> "Les limites de mon langage sont les limites de mon monde." Sens naît de l'usage dans contextes spécifiques.</p>
 </div>
 
-<div class="page-break"></div>
-
-<div class="examples-section">
+<div class="page-break"></div><div class="examples-section">
     <h4><i class="fas fa-lightbulb"></i> Exemples et analyses</h4>
     <div class="example">
         <div class="example-title">Exemple 1 : L'enfant sourd-muet Helen Keller</div>
@@ -46,9 +44,6 @@
     </div>
 </div>
 
-<div class="page-break"></div>
-
-<div class="examples-section">
     <h4><i class="fas fa-question-circle"></i> Problématiques essentielles</h4>
     <div class="example">
         <div class="example-title">Problème 1 : Pensée et langage</div>
@@ -60,10 +55,6 @@
     </div>
 </div>
 
-<div class="page-break"></div>
-
-<div class="examples-section">
-    <h4><i class="fa fa-quote-left"></i> Citations clés à retenir</h4>
     <div class="example">
         <div class="example-title">Ludwig Wittgenstein</div>
         <p><em>"Les limites de mon langage sont les limites de mon monde."</em></p>
@@ -79,7 +70,18 @@
     <div class="example">
         <div class="example-title">Émile Benveniste</div>
         <p><em>"C'est dans et par le langage que l'homme se constitue comme sujet."</em></p>
-        <p><strong>Contexte :</strong> Problèmes de linguistique générale - le langage comme condition de la subjectivité.</p>    </div>
+        <p><strong>Contexte :</strong> Problèmes de linguistique générale - le langage comme condition de la subjectivité.</p>
+    </div>
+    <div class="example">
+        <div class="example-title">Roman Jakobson</div>
+        <p><em>"Le langage a une fonction poétique qui projette le principe d'équivalence de l'axe de la sélection sur l'axe de la combinaison."</em></p>
+    </div>
+    <div class="example">
+        <div class="example-title">Noam Chomsky</div>
+        <p><em>"La faculté de langage est innée et universelle chez l'homme."</em></p>
+    </div>
 </div>
 </body>
 </html>
+
+
