--- a/Bac/Philosophie/notion12.html
+++ b/Bac/Philosophie/notion12.html
@@ -22,7 +22,7 @@
     </ul>
 </div>
 
-<div class="page-break"></div>
+
 
 <div class="course-section">
     <h5>Théories essentielles</h5>
@@ -35,9 +35,7 @@
     <p><strong>Hegel :</strong> Raison dialectique progresse par contradiction. "Tout ce qui est réel est rationnel, et tout rationnel est réel."</p>
 </div>
 
-<div class="page-break"></div>
-
-<div class="examples-section">
+<div class="page-break"></div><div class="examples-section">
     <h4><i class="fas fa-lightbulb"></i> Exemples et analyses</h4>
     <div class="example">
         <div class="example-title">Exemple 1 : La démonstration mathématique</div>
@@ -52,9 +50,6 @@
     </div>
 </div>
 
-<div class="page-break"></div>
-
-<div class="examples-section">
     <h4><i class="fas fa-question-circle"></i> Problématiques essentielles</h4>
     <div class="example">
         <div class="example-title">Problème 1 : Limites de la raison</div>
@@ -67,10 +62,6 @@
     </div>
 </div>
 
-<div class="page-break"></div>
-
-<div class="examples-section">
-    <h4><i class="fa fa-quote-left"></i> Citations clés</h4>
     <div class="example">
         <div class="example-title">René Descartes</div>
         <p><em>"Le bon sens est la chose du monde la mieux partagée."</em></p>
@@ -89,3 +80,5 @@
 
 </body>
 </html>
+
+
