--- a/Bac/Philosophie/notion13.html
+++ b/Bac/Philosophie/notion13.html
@@ -22,7 +22,7 @@
     </ul>
 </div>
 
-<div class="page-break"></div>
+
 
 <div class="course-section">
     <h5>Théories essentielles</h5>
@@ -33,9 +33,7 @@
     <p><strong>Rawls :</strong> Justice comme équité. Sous "voile d'ignorance", on choisirait principes garantissant liberté et égalité des chances.</p>
 </div>
 
-<div class="page-break"></div>
-
-<div class="examples-section">
+<div class="page-break"></div><div class="examples-section">
     <h4><i class="fas fa-lightbulb"></i> Exemples et analyses</h4>
     <div class="example">
         <div class="example-title">Exemple 1 : La progressivité de l'impôt</div>
@@ -50,9 +48,6 @@
     </div>
 </div>
 
-<div class="page-break"></div>
-
-<div class="examples-section">
     <h4><i class="fas fa-question-circle"></i> Problématiques essentielles</h4>
     <div class="example">
         <div class="example-title">Problème 1 : Fondement de la justice</div>
@@ -65,10 +60,6 @@
     </div>
 </div>
 
-<div class="page-break"></div>
-
-<div class="examples-section">
-    <h4><i class="fa fa-quote-left"></i> Citations clés</h4>
     <div class="example">
         <div class="example-title">Platon</div>
         <p><em>"La justice consiste à faire ce qui nous revient."</em></p>
@@ -87,3 +78,5 @@
 
 </body>
 </html>
+
+
