--- a/SandFall/blog.html
+++ b/SandFall/blog.html
@@ -32,12 +32,10 @@
 			<div class="mobile-social-icons"></div>
 		</div>
 	</header>
-	<div class="navbar-underline"></div>
-	<video autoplay muted loop class="hero-bg-video" id="bg-video">
+	<div class="navbar-underline"></div>	<video autoplay muted loop class="hero-bg-video" id="bg-video">
 		<source src="images/video/bg.mp4" type="video/mp4">
 		Your browser does not support the video tag.
 	</video>
-	<div class="hero-overlay"></div>
 	<main class="blog-container">
 		<header class="blog-header">
 			<h1 class="blog-title">Blog</h1>
