--- a/SandFall/index.html
+++ b/SandFall/index.html
@@ -102,7 +102,7 @@
 			<p class="sandfall-team-subtitle">Meet Expedition 33 makers!</p>
 			<div class="sandfall-team-grid"></div>
 			<div class="team-discover-section">
-				<button class="team-discover-btn">Discover all team members →</button>
+				<button class="team-discover-btn" onclick="window.location.href='team.html'">Discover all team members →</button>
 			</div>
 		</div>
 	</section>
