--- a/Bac/Philosophie/notion1.html
+++ b/Bac/Philosophie/notion1.html
@@ -30,7 +30,6 @@
     <p><strong>Sigmund Freud :</strong> Critique de la conscience souveraine : "Le moi n'est pas maître dans sa propre maison." L'inconscient détermine largement nos pensées et actions. La conscience n'est que la partie émergée de l'iceberg psychique.</p>
 </div>
 
-<div class="page-break"></div><div class="examples-section">
     <h4><i class="fas fa-lightbulb"></i> Exemples et analyses</h4>
     <div class="example">
         <div class="example-title">Exemple 1 : Le cogito cartésien</div>
@@ -50,6 +49,8 @@
         <p><strong>Analyse :</strong> La conscience n'est pas seulement connaissance de soi mais aussi jugement moral. Elle témoigne de notre liberté et responsabilité : seul un être conscient peut se sentir coupable et décider de changer.</p>
     </div>
 </div>
+<div class="page-break"></div>
+
 
 <div class="examples-section">
     <h4><i class="fas fa-question-circle"></i> Problématiques essentielles</h4>
