--- a/Bac/Philosophie/notion10.html
+++ b/Bac/Philosophie/notion10.html
@@ -31,7 +31,6 @@
       <p><strong>Kant :</strong> Bonheur empirique ne peut fonder morale (subjectif, variable). Seul bonheur moral (souverain bien) unit vertu et satisfaction.</p>
 </div>
 
-<div class="page-break"></div><div class="examples-section">
     <h4><i class="fas fa-lightbulb"></i> Exemples et analyses</h4>
     <div class="example">
         <div class="example-title">Exemple 1 : Le paradoxe du bonheur moderne</div>
@@ -40,6 +39,8 @@
     </div>
       <div class="example">
         <div class="example-title">Exemple 2 : Le bonheur dans l'adversité</div>
+<div class="page-break"></div>
+
         <p>Certaines personnes font preuve d'une remarquable sérénité face aux épreuves, tandis que d'autres sombrent malgré conditions favorables.</p>
         <p><strong>Analyse :</strong> Le bonheur semble moins dépendre des circonstances extérieures que de notre attitude intérieure. Relève plus de la sagesse que de la chance.</p>
     </div>
