--- a/Bac/Philosophie/notion12.html
+++ b/Bac/Philosophie/notion12.html
@@ -35,13 +35,14 @@
     <p><strong>Hegel :</strong> Raison dialectique progresse par contradiction. "Tout ce qui est réel est rationnel, et tout rationnel est réel."</p>
 </div>
 
-<div class="page-break"></div><div class="examples-section">
     <h4><i class="fas fa-lightbulb"></i> Exemples et analyses</h4>
     <div class="example">
         <div class="example-title">Exemple 1 : La démonstration mathématique</div>
         <p>Théorème de Pythagore démontré par déduction logique à partir d'axiomes.</p>
         <p><strong>Analyse :</strong> Montre raison rigoureuse, universelle et nécessaire. Modèle de rationalité scientifique.</p>
     </div>
+<div class="page-break"></div>
+
     
     <div class="example">
         <div class="example-title">Exemple 2 : Le débat démocratique</div>
