--- a/Bac/Philosophie/notion13.html
+++ b/Bac/Philosophie/notion13.html
@@ -33,7 +33,6 @@
     <p><strong>Rawls :</strong> Justice comme équité. Sous "voile d'ignorance", on choisirait principes garantissant liberté et égalité des chances.</p>
 </div>
 
-<div class="page-break"></div><div class="examples-section">
     <h4><i class="fas fa-lightbulb"></i> Exemples et analyses</h4>
     <div class="example">
         <div class="example-title">Exemple 1 : La progressivité de l'impôt</div>
@@ -41,6 +40,8 @@
         <p><strong>Analyse :</strong> Conflit entre justice méritocratique, égalitaire et sociale. Quel principe doit primer ?</p>
     </div>
     
+<div class="page-break"></div>
+
     <div class="example">
         <div class="example-title">Exemple 2 : La discrimination positive</div>
         <p>Favoriser accès éducation/emploi pour groupes historiquement discriminés.</p>
