--- a/Bac/Philosophie/notion15.html
+++ b/Bac/Philosophie/notion15.html
@@ -34,7 +34,6 @@
     <p><strong>Kuhn :</strong> Science progresse par révolutions paradigmatiques, pas seulement accumulation linéaire.</p>
 </div>
 
-<div class="page-break"></div><div class="examples-section">
     <h4><i class="fas fa-lightbulb"></i> Exemples et analyses</h4>
     <div class="example">
         <div class="example-title">Exemple 1 : La révolution copernicienne</div>
@@ -46,6 +45,8 @@
         <div class="example-title">Exemple 2 : La découverte de la pénicilline</div>
         <p>Alexander Fleming découvre par hasard (1928) les propriétés antibiotiques d'une moisissure, révolutionnant la médecine et sauvant des millions de vies.</p>
         <p><strong>Analyse :</strong> Illustre le rôle du hasard en science (sérendipité) et l'importance de l'observation attentive. Montre aussi les enjeux éthiques et sociaux de la recherche scientifique.</p>
+<div class="page-break"></div>
+
     </div>
     
     <div class="example">
