--- a/Bac/Philosophie/notion16.html
+++ b/Bac/Philosophie/notion16.html
@@ -34,7 +34,6 @@
     <p><strong>Weber :</strong> État = monopole de la violence physique légitime sur territoire donné. Autorité légale-rationnelle.</p>
 </div>
 
-<div class="page-break"></div><div class="examples-section">
     <h4><i class="fas fa-lightbulb"></i> Exemples et analyses</h4>
     <div class="example">
         <div class="example-title">Exemple 1 : La désobéissance civile</div>
@@ -48,6 +47,8 @@
         <p><strong>Analyse :</strong> Révèle l'évolution du rôle de l'État : de simple garant de l'ordre à acteur de justice sociale. Soulève la tension entre liberté individuelle et solidarité collective.</p>
     </div>
     
+<div class="page-break"></div>
+
     <div class="example">
         <div class="example-title">Exemple 3 : La mondialisation et la souveraineté</div>
         <p>Les États nationaux voient leur pouvoir limité par les organisations internationales, les multinationales et les flux transnationaux (capitaux, information, migrations).</p>
