--- a/Bac/Philosophie/notion17.html
+++ b/Bac/Philosophie/notion17.html
@@ -34,7 +34,6 @@
     <p><strong>Sartre :</strong> "Nous sommes condamnés à être libres." Pas de nature humaine préétablie : nous devons inventer nos valeurs.</p>
 </div>
 
-<div class="page-break"></div><div class="examples-section">
     <h4><i class="fas fa-lightbulb"></i> Exemples et analyses</h4>
     <div class="example">
         <div class="example-title">Exemple 1 : Le mensonge par compassion</div>
@@ -46,6 +45,8 @@
         <div class="example-title">Exemple 2 : La désobéissance civile</div>
         <p>Henry David Thoreau refuse de payer ses impôts pour protester contre l'esclavage et la guerre. Il va en prison par devoir de conscience, malgré la légalité de l'impôt.</p>
         <p><strong>Analyse :</strong> Il peut y avoir conflit entre devoir légal et devoir moral. La conscience individuelle peut s'opposer à la loi positive au nom d'un devoir supérieur.</p>
+<div class="page-break"></div>
+
     </div>
     
     <div class="example">
