--- a/Bac/Philosophie/notion3.html
+++ b/Bac/Philosophie/notion3.html
@@ -26,7 +26,6 @@
     <p><strong>Husserl :</strong> Conscience du temps : rétention (passé immédiat), protoimpression (présent), protention (futur immédiat).</p>    <p><strong>McTaggart :</strong> Paradoxe temporel : le temps suppose changement mais tout changement suppose temps. Le temps est-il une illusion ?</p>
 </div>
 
-<div class="page-break"></div><div class="examples-section">
     <h4><i class="fas fa-lightbulb"></i> Exemples et analyses</h4>    <div class="example">
         <div class="example-title">L'ennui et l'attente</div>
         <p>Dans l'ennui, les minutes paraissent des heures. Dans l'passion amoureuse, les heures passent comme des minutes. L'attente à l'arrêt de bus semble éternelle même si elle ne dure que 5 minutes.</p>
@@ -45,6 +44,8 @@
         <p><strong>Analyse :</strong> Art interroge nature du temps : instant privilégié (photo) vs flux temporel (cinéma). Révèle tension entre temps de l'être et temps du devenir.</p>
     </div>
 </div>
+<div class="page-break"></div>
+
 
 <div class="examples-section">
     <h4><i class="fas fa-question-circle"></i> Problématiques essentielles</h4>    <div class="example">
