--- a/Bac/Philosophie/notion5.html
+++ b/Bac/Philosophie/notion5.html
@@ -27,7 +27,6 @@
     <p><strong>Benjamin :</strong> Reproductibilité technique détruit "aura" de l'œuvre d'art unique.</p>
 </div>
 
-<div class="page-break"></div><div class="examples-section">
     <h4><i class="fas fa-lightbulb"></i> Exemples</h4>
     <div class="example">
         <div class="example-title">La Joconde</div>
@@ -39,6 +38,8 @@
         <p>Réaction au bombardement de Guernica (1937). Style cubiste fragmente formes pour exprimer violence. Noir et blanc accentuent tragédie.</p>
         <p><strong>Analyse :</strong> Montre comment art peut être engagé politiquement sans perdre valeur esthétique. Innovation formelle sert dénonciation éthique.</p>
     </div>
+<div class="page-break"></div>
+
     <div class="example">
         <div class="example-title">Les Nymphéas de Monet</div>
         <p>Série de 250 peintures du jardin de Giverny. Recherche pure de la lumière et couleur, abstraction progressive.</p>
