--- a/Bac/Philosophie/notion6.html
+++ b/Bac/Philosophie/notion6.html
@@ -25,7 +25,6 @@
     <p><strong>Weber :</strong> "Éthique protestante" valorise travail comme vocation, fonde "esprit du capitalisme".</p>
 </div>
 
-<div class="page-break"></div><div class="examples-section">
     <h4><i class="fas fa-lightbulb"></i> Exemples et analyses</h4>    <div class="example">
         <div class="example-title">L'artisan et l'ouvrier spécialisé</div>
         <p>L'artisan médiéval maîtrise son travail de A à Z : il choisit ses matériaux, connaît ses clients, signe son œuvre. L'ouvrier moderne répète gestes fragmentaires sans voir le produit final ni connaître sa destination.</p>
@@ -41,6 +40,8 @@
         <p>David Graeber décrit emplois inutiles socialement mais bien rémunérés, générant frustration chez travailleurs conscients de l'inutilité de leur tâche.</p>
         <p><strong>Analyse :</strong> Révèle divorce entre utilité sociale et rémunération. Interroge sens du travail dans société post-industrielle : travailler pour gagner sa vie ou pour contribuer au bien commun ?</p>
     </div>
+
+<div class="page-break"></div>
 
     <h4><i class="fas fa-question-circle"></i> Problématiques essentielles</h4>
     <div class="example">
