--- a/Bac/Philosophie/notion7.html
+++ b/Bac/Philosophie/notion7.html
@@ -25,7 +25,6 @@
     <p><strong>Freud :</strong> Religion = "névrose obsessionnelle de l'humanité", née de l'impuissance face à la nature et projection du père idéalisé.</p>
 </div>
 
-<div class="page-break"></div><div class="examples-section">
     <h4><i class="fas fa-lightbulb"></i> Exemples et analyses</h4>
     <div class="example">
         <div class="example-title">Exemple 1 : Les rites de passage</div>
@@ -44,6 +43,8 @@
         <p>La religion est-elle nécessairement irrationnelle ? Faut-il choisir entre foi (saut au-delà de la raison) et compatibilité foi/raison ?</p>
     </div>
     
+<div class="page-break"></div>
+
     <div class="example">
         <div class="example-title">Problème 2 : Liberté ou aliénation</div>
         <p>La religion libère-t-elle (sens, consolation, valeurs) ou aliène-t-elle (dogmes, ignorance, oppression) ? Comment trancher entre émancipation et aliénation ?</p>
