--- a/Bac/Philosophie/notion8.html
+++ b/Bac/Philosophie/notion8.html
@@ -33,7 +33,6 @@
     <p><strong>Ellul :</strong> Technique = système autonome qui échappe au contrôle humain. Obéit à sa logique d'efficacité, transforme tous domaines.</p>
 </div>
 
-<div class="page-break"></div><div class="examples-section">
     <h4><i class="fas fa-lightbulb"></i> Exemples et analyses</h4>
     
     <div class="example">
@@ -42,6 +41,8 @@
         <p><strong>Analyse :</strong> Cet exemple illustre l'ambivalence de la technique : elle accroît la productivité et améliore le niveau de vie général, mais elle détruit aussi des savoir-faire traditionnels et crée de nouvelles formes d'aliénation. La technique n'est jamais neutre socialement.</p>
     </div>    <div class="example">
         <div class="example-title">Exemple 2 : Internet et les réseaux sociaux</div>
+<div class="page-break"></div>
+
         <p>Internet transforme communication, information et socialisation. Promet démocratie et lien social mais crée bulles informationnelles, surveillance, addictions.</p>
         <p><strong>Analyse :</strong> Illustre dialectique libération/asservissement : technique façonne nos comportements autant qu'elle les sert.</p>
     </div>
