--- a/Bac/Philosophie/notion9.html
+++ b/Bac/Philosophie/notion9.html
@@ -31,7 +31,6 @@
     <p><strong>Kant :</strong> Homme appartient simultanément au monde sensible (nature) et intelligible (liberté morale). Doit s'élever par la raison.</p>
 </div>
 
-<div class="page-break"></div><div class="examples-section">
     <h4><i class="fas fa-lightbulb"></i> Exemples et analyses</h4>
     <div class="example">
         <div class="example-title">Exemple 1 : L'enfant sauvage de l'Aveyron</div>
@@ -40,6 +39,8 @@
     </div>
       <div class="example">
         <div class="example-title">Exemple 2 : L'écologie et la crise environnementale</div>
+<div class="page-break"></div>
+
         <p>Réchauffement climatique et destruction écosystèmes résultent de l'activité industrielle. L'homme compromet sa propre survie.</p>
         <p><strong>Analyse :</strong> Illustre tension entre domination technique et respect équilibres naturels. Questionne rapport prométhéen à la nature.</p>
     </div>
