--- a/Bac/index.html
+++ b/Bac/index.html
@@ -17,7 +17,7 @@
         <h2 class="button-title">Mathématiques</h2>
         <p class="button-description">Cours et exercices de maths terminale</p>
       </a>
-      <a href="#" class="subject-button nsi">
+      <a href="NSI/index.html" class="subject-button nsi">
         <div class="button-icon">
           <i class="fas fa-laptop-code"></i>
         </div>
