--- a/Bac/Philosophie/notion11.html
+++ b/Bac/Philosophie/notion11.html
@@ -30,7 +30,6 @@
     <p><strong>Wittgenstein :</strong> "Les limites de mon langage sont les limites de mon monde." Sens naît de l'usage dans contextes spécifiques.</p>
 </div>
 
-<div class="page-break"></div><div class="examples-section">
     <h4><i class="fas fa-lightbulb"></i> Exemples et analyses</h4>
     <div class="example">
         <div class="example-title">Exemple 1 : L'enfant sourd-muet Helen Keller</div>
@@ -43,6 +42,8 @@
         <p><strong>Analyse :</strong> Les langues ne sont pas simples codes interchangeables mais visions du monde spécifiques. Diversité linguistique enrichit l'humanité.</p>
     </div>
 </div>
+
+<div class="page-break"></div>
 
     <h4><i class="fas fa-question-circle"></i> Problématiques essentielles</h4>
     <div class="example">
