--- a/Bac/Philosophie/notion14.html
+++ b/Bac/Philosophie/notion14.html
@@ -35,13 +35,14 @@
     <p><strong>Pragmatisme :</b> (James, Dewey) Vérité = ce qui réussit dans l'expérience pratique.</p>
 </div>
 
-<div class="page-break"></div><div class="examples-section">
     <h4><i class="fas fa-lightbulb"></i> Exemples et analyses</h4>
     <div class="example">
         <div class="example-title">Exemple 1 : Les illusions d'optique</div>
         <p>Nos sens peuvent tromper : bâton paraît brisé dans l'eau, lignes égales paraissent inégales.</p>
         <p><strong>Analyse :</strong> Critique connaissance sensible. Peut-on faire confiance aux sens ? Corriger par la raison ?</p>
     </div>
+<div class="page-break"></div>
+
     
     <div class="example">
         <div class="example-title">Exemple 2 : Les révolutions scientifiques</div>
