--- a/Bac/Philosophie/notion2.html
+++ b/Bac/Philosophie/notion2.html
@@ -29,7 +29,6 @@
       <p><strong>Henri Bergson :</strong> Critique de l'inconscient freudien. Préfère parler de "conscience virtuelle" : tout est conscient mais à des degrés divers d'actualisation.</p>
 </div>
 
-<div class="page-break"></div><div class="examples-section">
     <h4><i class="fas fa-lightbulb"></i> Exemples et analyses</h4>
     <div class="example">
         <div class="example-title">Exemple 1 : Les rêves et leur interprétation</div>
@@ -58,6 +57,8 @@
 
 <div class="examples-section">
     <h4><i class="fas fa-question-circle"></i> Problématiques essentielles</h4>
+<div class="page-break"></div>
+
     <div class="example">
         <div class="example-title">Problème 1 : L'inconscient existe-t-il vraiment ?</div>
         <p>L'inconscient est-il une réalité psychique ou une hypothèse explicative ? Peut-on prouver scientifiquement son existence ? Bergson critique : "L'inconscient psychologique est une hypothèse nécessaire mais non prouvée."</p>
