--- a/Bac/Philosophie/notion4.html
+++ b/Bac/Philosophie/notion4.html
@@ -26,7 +26,6 @@
     <p><strong>Bergson :</strong> Vraie liberté = actes émanant de notre personnalité entière, expression spontanée du moi profond.</p>    <p><strong>Schopenhauer :</strong> "Un homme peut faire ce qu'il veut, mais non vouloir ce qu'il veut." Volonté déterminée par caractère.</p>
 </div>
 
-<div class="page-break"></div><div class="examples-section">
     <h4><i class="fas fa-lightbulb"></i> Exemples et analyses</h4>
     <div class="example">
         <div class="example-title">Exemple 1 : L'âne de Buridan</div>
@@ -42,6 +41,8 @@
 </div>
 
 <div class="examples-section">
+<div class="page-break"></div>
+
     <h4><i class="fas fa-question-circle"></i> Problématiques essentielles</h4>
     <div class="example">
         <div class="example-title">Problème 1 : Liberté et déterminisme</div>
