--- a/SandFall/index.html
+++ b/SandFall/index.html
@@ -102,7 +102,7 @@
 			<p class="sandfall-team-subtitle">Meet Expedition 33 makers!</p>
 			<div class="sandfall-team-grid"></div>
 			<div class="team-discover-section">
-				<button class="team-discover-btn" onclick="window.location.href='team.html'">Discover all team members →</button>
+				<button class="team-discover-btn" onclick="window.location.href='team.html'">Discover all team members </button>
 			</div>
 		</div>
 	</section>
@@ -116,21 +116,10 @@
 		</div>
 	</section>
 	<section class="supporters-section">
-		<div class="supporters-container">
-			<h2 class="supporters-title">They support us:</h2>
-			<div class="supporters-slider">
-				<div class="supporters-track">
-					<img src="images/feat/emgr.png" alt="Epic MegaGrants Recipient" class="supporter-img" />
-					<img src="images/feat/cnc.png" alt="CNC" class="supporter-img" />
-					<img src="images/feat/occitanie.png" alt="La Région Occitanie" class="supporter-img" />
-					<img src="images/feat/emgr.png" alt="Epic MegaGrants Recipient" class="supporter-img" />
-					<img src="images/feat/cnc.png" alt="CNC" class="supporter-img" />
-					<img src="images/feat/occitanie.png" alt="La Région Occitanie" class="supporter-img" />
-					<img src="images/feat/emgr.png" alt="Epic MegaGrants Recipient" class="supporter-img" />
-					<img src="images/feat/cnc.png" alt="CNC" class="supporter-img" />
-					<img src="images/feat/occitanie.png" alt="La Région Occitanie" class="supporter-img" />
-				</div>
-			</div>
+		<div class="supporters-container">		<h2 class="supporters-title">They support us:</h2>
+		<div class="supporters-slider">
+			<!-- Supporters will be loaded dynamically by JavaScript -->
+		</div>
 		</div>
 	</section>
 	<footer class="footer">
@@ -138,9 +127,9 @@
 			<p class="footer-copyright">©2024-25 by Sandfall Interactive - Website by Léo Tosku</p>
 			<p class="footer-legal">Legal Information</p>
 		</div>
-	</footer>
-	<script src="js/navigation.js"></script>
+	</footer>	<script src="js/navigation.js"></script>
 	<script src="js/team-loader.js"></script>
+	<script src="js/supporters.js"></script>
 	<script src="js/intro.js"></script>
 	<script src="js/navbar.js"></script>
 	<script src="js/hero.js"></script>
