--- a/SandFall/index.html
+++ b/SandFall/index.html
@@ -3,6 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<meta name="description" content="Sandfall Interactive is a video game studio developing premium 3D games for PC and new gen consoles. Discover our game Clair Obscur: Expedition 33.">
 	<title>Sandfall Interactive</title>
 	<link rel="stylesheet" href="styles/main.css">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" crossorigin="anonymous" referrerpolicy="no-referrer" />
