--- a/SandFall/index.html
+++ b/SandFall/index.html
@@ -85,8 +85,8 @@
 					<p><strong>Dive into an epic single-player narrative-driven adventure.</strong></p>
 					<p>For more info, visit the Clair Obscur: <a class="exp33-link" href="#" target="_blank">Expedition 33 official website.</a></p>
 					<div class="expedition33-btn-row">
-						<a class="exp33-btn buy-now" href="#" target="_blank">Buy now!</a>
-						<a class="exp33-btn secondary" href="#" target="_blank">Expedition 33 Website</a>
+						<a class="exp33-btn buy-now" href="https://www.expedition33.com/linkhub" target="_blank">Buy now!</a>
+						<a class="exp33-btn secondary" href="https://www.expedition33.com/" target="_blank">Expedition 33 Website</a>
 					</div>
 					<form class="exp33-newsletter">
 						<label for="exp33-email">Register your email to get our latest news!</label>
