--- a/SandFall/index.html
+++ b/SandFall/index.html
@@ -1,9 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-	<meta charset="UTF-8">
+<head>	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta name="description" content="Sandfall Interactive is a video game studio developing premium 3D games for PC and new gen consoles. Discover our game Clair Obscur: Expedition 33.">
+	<meta name="keywords" content="Sandfall Interactive, game development, video games, PC games, console games, Clair Obscur Expedition 33, game studio">
+	<meta name="author" content="Sandfall Interactive">
+	
+	<!-- Open Graph / Facebook -->
+	<meta property="og:type" content="website">
+	<meta property="og:url" content="https://l-dev31.github.io/Sandfall/">
+	<meta property="og:title" content="Sandfall Interactive - Video Game Studio">
+	<meta property="og:description" content="Sandfall Interactive is a video game studio developing premium 3D games for PC and new gen consoles. Discover our game Clair Obscur: Expedition 33.">
+	<meta property="og:image" content="https://l-dev31.github.io/Sandfall/images/team1.jpg">
+
+	<!-- Twitter -->
+	<meta property="twitter:card" content="summary_large_image">
+	<meta property="twitter:url" content="https://l-dev31.github.io/Sandfall/">
+	<meta property="twitter:title" content="Sandfall Interactive - Video Game Studio">
+	<meta property="twitter:description" content="Sandfall Interactive is a video game studio developing premium 3D games for PC and new gen consoles. Discover our game Clair Obscur: Expedition 33.">
+	<meta property="twitter:image" content="https://l-dev31.github.io/Sandfall/images/team1.jpg">
+	
 	<title>Sandfall Interactive</title>
 	<link rel="stylesheet" href="styles/main.css">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" crossorigin="anonymous" referrerpolicy="no-referrer" />
