--- a/SandFall/team.html
+++ b/SandFall/team.html
@@ -1,9 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-	<meta charset="UTF-8">
+<head>	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta name="description" content="Meet the team behind Sandfall Interactive and our game Clair Obscur: Expedition 33.">
+	<meta name="keywords" content="Sandfall Interactive, team, game developers, video game team, Clair Obscur Expedition 33">
+	<meta name="author" content="Sandfall Interactive">
+	
+	<!-- Open Graph / Facebook -->
+	<meta property="og:type" content="website">
+	<meta property="og:url" content="https://sandfall-interactive.com/team.html">
+	<meta property="og:title" content="Team - Sandfall Interactive">
+	<meta property="og:description" content="Meet the team behind Sandfall Interactive and our game Clair Obscur: Expedition 33.">
+	<meta property="og:image" content="https://sandfall-interactive.com/images/team1.jpg">
+
+	<!-- Twitter -->
+	<meta property="twitter:card" content="summary_large_image">
+	<meta property="twitter:url" content="https://sandfall-interactive.com/team.html">
+	<meta property="twitter:title" content="Team - Sandfall Interactive">
+	<meta property="twitter:description" content="Meet the team behind Sandfall Interactive and our game Clair Obscur: Expedition 33.">
+	<meta property="twitter:image" content="https://sandfall-interactive.com/images/team1.jpg">
+	
 	<title>Team - Sandfall Interactive</title>
 	<link rel="stylesheet" href="styles/main.css">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" crossorigin="anonymous" referrerpolicy="no-referrer" />
