--- a/SandFall/blog.html
+++ b/SandFall/blog.html
@@ -1,9 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-	<meta charset="UTF-8">
+<head>	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta name="description" content="Read the latest news and articles from Sandfall Interactive on our official blog.">
+	<meta name="keywords" content="Sandfall Interactive, game development, blog, news, articles, game studio">
+	<meta name="author" content="Sandfall Interactive">
+	
+	<!-- Open Graph / Facebook -->
+	<meta property="og:type" content="website">
+	<meta property="og:url" content="https://sandfall-interactive.com/blog.html">
+	<meta property="og:title" content="Blog - Sandfall Interactive">
+	<meta property="og:description" content="Read the latest news and articles from Sandfall Interactive on our official blog.">
+	<meta property="og:image" content="https://sandfall-interactive.com/images/favicon.png">
+
+	<!-- Twitter -->
+	<meta property="twitter:card" content="summary_large_image">
+	<meta property="twitter:url" content="https://sandfall-interactive.com/blog.html">
+	<meta property="twitter:title" content="Blog - Sandfall Interactive">
+	<meta property="twitter:description" content="Read the latest news and articles from Sandfall Interactive on our official blog.">
+	<meta property="twitter:image" content="https://sandfall-interactive.com/images/favicon.png">
+	
 	<title>Blog - Sandfall Interactive</title>
 	<link rel="stylesheet" href="styles/main.css">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" crossorigin="anonymous" referrerpolicy="no-referrer" />
